--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
 	<link rel="stylesheet" href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css" />
 </head>
 <body>
-	<h1>Welcome to Hello World</h1>
+	<h1>Welcome to Hello World index html </h1>
 	<br/>
 	<h2>It is working as we expected :-)</h2>
 	<br/>
